@@ -1,6 +1,11 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Separate Polling from the Vehicle implementation
+  New commands:
+    poller status
+    poller pause
+    poller resume
 - Duktape support for Metric Age / Stale
   New Duktape methods
     OvmsMetrics.IsStale
